--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNPdedjAH6Z0gAUudSnWQfn",
+      "authorship_tag": "ABX9TyO5is+b/Z0qeiXzMZQy8u1D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,8 +49,7 @@
         "id": "kEf4GSz_Vva4"
       },
       "source": [
-        "* https://elixirschool.com/ja/lessons/basics/basics/\n",
-        "* https://elixirschool.com/ja/lessons/basics/control-structures/\n",
+        "* https://elixirschool.com/ja/lessons/basics/collections/#マップ\n",
         "* https://magazine.rubyist.net/articles/0054/0054-ElixirBook.html"
       ]
     },
@@ -1061,28 +1060,19 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "XclysRjIZ-j8"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "3qIWDH31ZxtW",
-        "outputId": "0b112a23-0366-4eaf-89f1-c7401d6fe9dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0b112a23-0366-4eaf-89f1-c7401d6fe9dc"
       },
       "source": [
         "# 加えて、アトムのキーにアクセスするための特別な構文がある。\n",
         "!elixir -e 'map = %{foo: \"bar\", hello: \"world\"}; IO.inspect map.hello'"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1097,17 +1087,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "q9GkwzvFaPHo",
-        "outputId": "980a6289-2e87-4d45-bad8-c43271fafcb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "980a6289-2e87-4d45-bad8-c43271fafcb4"
       },
       "source": [
         "# マップの更新のための構文がある (新シ map が作成される)\n",
         "# この構文は、マップに既に存在するキーを更新する場合にのみ機能する。\n",
         "!elixir -e 'map = %{foo: \"bar\", hello: \"world\"}; IO.inspect %{map | foo: \"baz\"}'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1119,34 +1109,278 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XclysRjIZ-j8"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cP3Im0X7qw1v",
+        "outputId": "84d640c8-7a16-4262-8578-7f40a9b3aa20",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 新しいキーを作成するには、`Map.put/3` を使用\n",
+        "!elixir -e 'map = %{hello: \"world\"}; IO.inspect  Map.put(map, :foo, \"baz\")'"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "%{foo: \"baz\", hello: \"world\"}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v2CvxtY_rag8"
+      },
+      "source": [
+        "# enum\n",
+        "\n",
+        "enum はリストなど"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1c-WGlISZ1fo"
       },
       "source": [
+        "Elixir School\n",
+        "        \n",
+        "Enum\n",
+        "この和訳は最新です。\n",
+        "コレクションを列挙していくために用いる一連のアルゴリズム。\n",
         "\n",
-        "新しいキーを作成するには、`Map.put/3` を使用する。\n",
+        "目次\n",
+        "Enum\n",
+        "all?\n",
+        "any?\n",
+        "chunk_every\n",
+        "chunk_by\n",
+        "map_every\n",
+        "each\n",
+        "map\n",
+        "min\n",
+        "max\n",
+        "filter\n",
+        "reduce\n",
+        "sort\n",
+        "uniq\n",
+        "uniq_by\n",
+        "キャプチャ演算子（&）を使用したEnum\n",
+        "無名関数でのキャプチャ演算子の使用\n",
+        "名前付き関数でのキャプチャ演算子の使用\n",
+        "Enum \n",
+        "Enum モジュールはおよそ70個以上の関数を含んでいます。前回のレッスンで学習した、タプルを除く全てのコレクションを列挙できます。\n",
+        "\n",
+        "このレッスンは利用可能な関数のうち一部分しか取り上げませんが、実は全ての関数を自分自身で調べることができます。 IExでちょっとした実験をしてみましょう。\n",
         "\n",
         "Copy\n",
-        "iex> map = %{hello: \"world\"}\n",
-        "%{hello: \"world\"}\n",
-        "iex> %{map | foo: \"baz\"}\n",
-        "** (KeyError) key :foo not found in: %{hello: \"world\"}\n",
-        "    (stdlib) :maps.update(:foo, \"baz\", %{hello: \"world\"})\n",
-        "    (stdlib) erl_eval.erl:259: anonymous fn/2 in :erl_eval.expr/5\n",
-        "    (stdlib) lists.erl:1263: :lists.foldl/3\n",
-        "iex> Map.put(map, :foo, \"baz\")\n",
-        "%{foo: \"baz\", hello: \"world\"}\n",
-        "Caught a mistake or want to contribute to the lesson? Edit this page on GitHub!\n",
-        "← 基本\n",
-        "Enum →\n",
-        "bg bn de en es fr gr id it ja ko ms no pl pt ru sk ta th tr uk vi zh-hans zh-hant\n",
-        "Elixir 1.10.1 - Erlang/OTP 22.0 [erts-10.5.3]\n",
-        "Menu\n",
-        "プログラミング言語Elixirのレッスン\n",
-        "© 2021 Sean Callan All rights reserved.\n",
+        "iex\n",
+        "iex> Enum.__info__(:functions) |> Enum.each(fn({function, arity}) ->\n",
+        "...>   IO.puts \"#{function}/#{arity}\"\n",
+        "...> end)\n",
+        "all?/1\n",
+        "all?/2\n",
+        "any?/1\n",
+        "any?/2\n",
+        "at/2\n",
+        "at/3\n",
+        "...\n",
+        "このように、 Enum モジュールが非常に多くの機能を持っていることは一目瞭然ですが、これには明確な理由があります。 列挙は関数型プログラミングの中核であり、Elixirが開発者にもたらす驚くべきその他の恩恵と基部で統合的に用意されているおかげです。\n",
         "\n",
-        "Toggle"
+        "全ての関数を知りたい場合は公式ドキュメントのEnumを参照してください。尚、列挙の遅延処理ではStreamモジュールを利用してください。\n",
+        "\n",
+        "all? \n",
+        "通常、 all?/2 にはコレクションの要素に対して適用する関数を渡します。 all?/2 の場合、コレクションの全体が true と評価されなければならず、そうでなければ false が返されます。\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.all?([\"foo\", \"bar\", \"hello\"], fn(s) -> String.length(s) == 3 end)\n",
+        "false\n",
+        "iex> Enum.all?([\"foo\", \"bar\", \"hello\"], fn(s) -> String.length(s) > 1 end)\n",
+        "true\n",
+        "any? \n",
+        "上記と違って、 any? は少なくとも1つの要素が true と評価された場合に true を返します:\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.any?([\"foo\", \"bar\", \"hello\"], fn(s) -> String.length(s) == 5 end)\n",
+        "true\n",
+        "chunk_every \n",
+        "コレクションを小さなグループに分割する必要があるなら、恐らく chunk_every/2 こそが探し求めている関数でしょう:\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.chunk_every([1, 2, 3, 4, 5, 6], 2)\n",
+        "[[1, 2], [3, 4], [5, 6]]\n",
+        "chunk_every/4 にはいくつかのオプションがありますが、ここでは触れないのでこの関数の公式ドキュメントを調べてください。\n",
+        "\n",
+        "chunk_by \n",
+        "要素数ではない他の何かでコレクションを分類したい場合には、 chunk_by/2 関数を使うことができます。この関数は列挙可能なコレクションと関数を引数に取り、その関数の戻り値が変化することによってコレクションの分類もそれに倣いながら開始されます。\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.chunk_by([\"one\", \"two\", \"three\", \"four\", \"five\"], fn(x) -> String.length(x) end)\n",
+        "[[\"one\", \"two\"], [\"three\"], [\"four\", \"five\"]]\n",
+        "iex> Enum.chunk_by([\"one\", \"two\", \"three\", \"four\", \"five\", \"six\"], fn(x) -> String.length(x) end)\n",
+        "[[\"one\", \"two\"], [\"three\"], [\"four\", \"five\"], [\"six\"]]\n",
+        "map_every \n",
+        "時にはコレクションをグループに別けるだけでは充分ではない場合があります。 nth 毎のアイテムに対して何かの処理をしたい時には map_every/3 が有用です。これは最初の要素にかならず触れます。\n",
+        "\n",
+        "Copy\n",
+        "# 関数を最初に適用してから3つ毎に同様の処理\n",
+        "iex> Enum.map_every([1, 2, 3, 4, 5, 6, 7, 8], 3, fn x -> x + 1000 end)\n",
+        "[1001, 2, 3, 1004, 5, 6, 1007, 8]\n",
+        "each \n",
+        "新しい値を生成することなく、コレクションを反復する必要があるかもしれません。こうした場合には each/2 を使います:\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.each([\"one\", \"two\", \"three\"], fn(s) -> IO.puts(s) end)\n",
+        "one\n",
+        "two\n",
+        "three\n",
+        ":ok\n",
+        "注記: each 関数は :ok というアトムを返します。\n",
+        "\n",
+        "map \n",
+        "関数を各要素に適用して新しいコレクションを生み出すなら map/2 関数です:\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.map([0, 1, 2, 3], fn(x) -> x - 1 end)\n",
+        "[-1, 0, 1, 2]\n",
+        "min \n",
+        "コレクションの中で最小の(min/1)値を探します:\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.min([5, 3, 0, -1])\n",
+        "-1\n",
+        "min/2 も同様ですが、コレクションが空であった場合にあらかじめ最小値を生成する為の関数を渡すことができます。\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.min([], fn -> :foo end)\n",
+        ":foo\n",
+        "max \n",
+        "コレクションの中で最大の(max/1)値を返します:\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.max([5, 3, 0, -1])\n",
+        "5\n",
+        "max/2 と max/1 の関係は min/2 と min/1 の関係と同じです:\n",
+        "\n",
+        "Copy\n",
+        "Enum.max([], fn -> :bar end)\n",
+        ":bar\n",
+        "filter \n",
+        "filter/2 を使うと、与えられた関数によって true と評価された要素だけを得る為に、それ以外の要素を取り除くことができます。\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.filter([1, 2, 3, 4], fn(x) -> rem(x, 2) == 0 end)\n",
+        "[2, 4]\n",
+        "reduce \n",
+        "reduce/3 を用いることで、コレクションをまとめ、そこから単一の値へと抽出することができます。この処理には任意のアキュムレータを関数に渡します。アキュムレータとは、前の演算結果を一時的に保持するものです(この例では 10)。アキュムレータが与えられない場合にはコレクションの最初の要素が用いられます。\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.reduce([1, 2, 3], 10, fn(x, acc) -> x + acc end)\n",
+        "16\n",
+        "\n",
+        "iex> Enum.reduce([1, 2, 3], fn(x, acc) -> x + acc end)\n",
+        "6\n",
+        "\n",
+        "iex> Enum.reduce([\"a\",\"b\",\"c\"], \"1\", fn(x,acc)-> x <> acc end)\n",
+        "\"cba1\"\n",
+        "sort \n",
+        "コレクションのソートに、関数を1つだけでなく2つ使うと容易になります。\n",
+        "\n",
+        "sort/1 はソートの順序を決める為にErlangの Term優先順位 を使います:\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.sort([5, 6, 1, 3, -1, 4])\n",
+        "[-1, 1, 3, 4, 5, 6]\n",
+        "\n",
+        "iex> Enum.sort([:foo, \"bar\", Enum, -1, 4])\n",
+        "[-1, 4, Enum, :foo, \"bar\"]\n",
+        "一方で sort/2 には、自分で順序を決める為の関数を渡すことができます:\n",
+        "\n",
+        "Copy\n",
+        "# ソート関数あり\n",
+        "iex> Enum.sort([%{:val => 4}, %{:val => 1}], fn(x, y) -> x[:val] > y[:val] end)\n",
+        "[%{val: 4}, %{val: 1}]\n",
+        "\n",
+        "# なし\n",
+        "iex> Enum.sort([%{:count => 4}, %{:count => 1}])\n",
+        "[%{count: 1}, %{count: 4}]\n",
+        "便宜上, sort/2 に :asc または :desc をソート関数として渡すことができます：\n",
+        "\n",
+        "Copy\n",
+        "Enum.sort([2, 3, 1], :desc)\n",
+        "[3, 2, 1]\n",
+        "uniq \n",
+        "uniq/1 を使ってコレクションから重複した要素を取り除くことができます:\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.uniq([1, 2, 3, 2, 1, 1, 1, 1, 1])\n",
+        "[1, 2, 3]\n",
+        "uniq_by \n",
+        "uniq_by/2 もコレクションから重複した要素を削除しますが、ユニークかどうか比較を行う関数を渡せます。\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.uniq_by([%{x: 1, y: 1}, %{x: 2, y: 1}, %{x: 3, y: 3}], fn coord -> coord.y end)\n",
+        "[%{x: 1, y: 1}, %{x: 3, y: 3}]\n",
+        "キャプチャ演算子（&）を使用したEnum \n",
+        "ElixirのEnumモジュール内の多くの関数は、渡されるEnum型のオブジェクトを処理するための引数として無名関数を取ります。\n",
+        "\n",
+        "これらの無名関数は、多くの場合、キャプチャ演算子（&）を使用して省略形で記述されます。\n",
+        "\n",
+        "Enumモジュールを使用してキャプチャ演算子を実装する方法を示すいくつかの例を次に示します。 各バージョンは機能的に同等です。\n",
+        "\n",
+        "無名関数でのキャプチャ演算子の使用 \n",
+        "以下は、無名関数を Enum.map/2 に渡すときの標準構文の典型的な例です。\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.map([1,2,3], fn number -> number + 3 end)\n",
+        "[4, 5, 6]\n",
+        "次に、キャプチャ演算子（&）を実装します。数値のリスト（[1,2,3]）の各要素をキャプチャし、マッピング関数を通過するときに各要素を変数&1に割り当てます。\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.map([1,2,3], &(&1 + 3))\n",
+        "[4, 5, 6]\n",
+        "これをさらにリファクタリングして、キャプチャ演算子を特徴とする以前の無名関数を変数に割り当て、 Enum.map/2 関数から呼び出すことができます。\n",
+        "\n",
+        "Copy\n",
+        "iex> plus_three = &(&1 + 3)\n",
+        "iex> Enum.map([1,2,3], plus_three)\n",
+        "[4, 5, 6]\n",
+        "名前付き関数でのキャプチャ演算子の使用 \n",
+        "まず、名前付き関数を作成し、 Enum.map/2 で定義されている無名関数内で呼び出します。\n",
+        "\n",
+        "Copy\n",
+        "defmodule Adding do\n",
+        "  def plus_three(number), do: number + 3\n",
+        "end\n",
+        "\n",
+        "iex>  Enum.map([1,2,3], fn number -> Adding.plus_three(number) end)\n",
+        "[4, 5, 6]\n",
+        "次に、キャプチャ演算子を使用するようにリファクタリングできます。\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.map([1,2,3], &Adding.plus_three(&1))\n",
+        "[4, 5, 6]\n",
+        "最も簡潔な構文の場合、変数を明示的にキャプチャせずに、名前付き関数を直接呼び出すことができます。\n",
+        "\n",
+        "Copy\n",
+        "iex> Enum.map([1,2,3], &Adding.plus_three/1)\n",
+        "[4, 5, 6]\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
