--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOjB9Kmw6ckrAVE95A1q2+F",
+      "authorship_tag": "ABX9TyMXiI0ALd7pBuu07sr6NQYG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,11 +59,161 @@
         "id": "THvpbkjdWs0Q"
       },
       "source": [
-        "%%capture\n",
-        "!sudo apt install elixir"
+        "!sudo apt update\n",
+        "# !wget https://packages.erlang-solutions.com/erlang-solutions_2.0_all.deb && sudo dpkg -i erlang-solutions_2.0_all.deb\n",
+        "# !sudo apt install elixir"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EWWg4PQLXM4A"
+      },
+      "source": [
+        "!wget https://packages.erlang-solutions.com/erlang-solutions_2.0_all.deb && sudo dpkg -i erlang-solutions_2.0_all.deb"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J0xt-97cYK2Y"
+      },
+      "source": [
+        "!sudo apt update"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "grT-hlQnXo0q",
+        "outputId": "20537ffb-0adc-4eab-ab29-ebdca89daa80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!sudo apt install elixir\n",
+        "\n"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "The following packages were automatically installed and are no longer required:\n",
+            "  libnvidia-common-460 linux-headers-4.15.0-142\n",
+            "  linux-headers-4.15.0-142-generic\n",
+            "Use 'sudo apt autoremove' to remove them.\n",
+            "The following additional packages will be installed:\n",
+            "  erlang-asn1 erlang-base erlang-crypto erlang-inets erlang-mnesia\n",
+            "  erlang-public-key erlang-runtime-tools erlang-ssl erlang-syntax-tools\n",
+            "Suggested packages:\n",
+            "  erlang erlang-manpages erlang-doc erlang-tools\n",
+            "The following NEW packages will be installed:\n",
+            "  erlang-asn1 erlang-inets erlang-mnesia erlang-public-key\n",
+            "  erlang-runtime-tools erlang-ssl\n",
+            "The following packages will be upgraded:\n",
+            "  elixir erlang-base erlang-crypto erlang-syntax-tools\n",
+            "4 upgraded, 6 newly installed, 0 to remove and 6 not upgraded.\n",
+            "Need to get 20.2 MB of archives.\n",
+            "After this operation, 12.6 MB of additional disk space will be used.\n",
+            "Get:1 http://binaries.erlang-solutions.com/debian bionic/contrib amd64 erlang-syntax-tools amd64 1:24.0-1 [367 kB]\n",
+            "Get:2 http://binaries.erlang-solutions.com/debian bionic/contrib amd64 erlang-crypto amd64 1:24.0-1 [190 kB]\n",
+            "Get:3 http://binaries.erlang-solutions.com/debian bionic/contrib amd64 erlang-base amd64 1:24.0-1 [10.5 MB]\n",
+            "Get:4 http://binaries.erlang-solutions.com/debian bionic/contrib amd64 erlang-mnesia amd64 1:24.0-1 [922 kB]\n",
+            "Get:5 http://binaries.erlang-solutions.com/debian bionic/contrib amd64 erlang-runtime-tools amd64 1:24.0-1 [256 kB]\n",
+            "Get:6 http://binaries.erlang-solutions.com/debian bionic/contrib amd64 erlang-asn1 amd64 1:24.0-1 [898 kB]\n",
+            "Get:7 http://binaries.erlang-solutions.com/debian bionic/contrib amd64 erlang-public-key amd64 1:24.0-1 [771 kB]\n",
+            "Get:8 http://binaries.erlang-solutions.com/debian bionic/contrib amd64 erlang-ssl amd64 1:24.0-1 [1,568 kB]\n",
+            "Get:9 http://binaries.erlang-solutions.com/debian bionic/contrib amd64 erlang-inets amd64 1:24.0-1 [668 kB]\n",
+            "Get:10 http://binaries.erlang-solutions.com/debian bionic/contrib amd64 elixir all 1.12.0-1 [4,123 kB]\n",
+            "Fetched 20.2 MB in 3s (7,494 kB/s)\n",
+            "debconf: unable to initialize frontend: Dialog\n",
+            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 10.)\n",
+            "debconf: falling back to frontend: Readline\n",
+            "debconf: unable to initialize frontend: Readline\n",
+            "debconf: (This frontend requires a controlling tty.)\n",
+            "debconf: falling back to frontend: Teletype\n",
+            "dpkg-preconfigure: unable to re-open stdin: \n",
+            "(Reading database ... 190939 files and directories currently installed.)\n",
+            "Preparing to unpack .../0-erlang-syntax-tools_1%3a24.0-1_amd64.deb ...\n",
+            "Unpacking erlang-syntax-tools (1:24.0-1) over (1:20.2.2+dfsg-1ubuntu2) ...\n",
+            "Preparing to unpack .../1-erlang-crypto_1%3a24.0-1_amd64.deb ...\n",
+            "Unpacking erlang-crypto (1:24.0-1) over (1:20.2.2+dfsg-1ubuntu2) ...\n",
+            "Preparing to unpack .../2-erlang-base_1%3a24.0-1_amd64.deb ...\n",
+            "Searching for services which depend on erlang and should be stopped...none found.\n",
+            "Killing epmd...it is not running.\n",
+            "Unpacking erlang-base (1:24.0-1) over (1:20.2.2+dfsg-1ubuntu2) ...\n",
+            "Selecting previously unselected package erlang-mnesia.\n",
+            "Preparing to unpack .../3-erlang-mnesia_1%3a24.0-1_amd64.deb ...\n",
+            "Unpacking erlang-mnesia (1:24.0-1) ...\n",
+            "Selecting previously unselected package erlang-runtime-tools.\n",
+            "Preparing to unpack .../4-erlang-runtime-tools_1%3a24.0-1_amd64.deb ...\n",
+            "Unpacking erlang-runtime-tools (1:24.0-1) ...\n",
+            "Selecting previously unselected package erlang-asn1.\n",
+            "Preparing to unpack .../5-erlang-asn1_1%3a24.0-1_amd64.deb ...\n",
+            "Unpacking erlang-asn1 (1:24.0-1) ...\n",
+            "Selecting previously unselected package erlang-public-key.\n",
+            "Preparing to unpack .../6-erlang-public-key_1%3a24.0-1_amd64.deb ...\n",
+            "Unpacking erlang-public-key (1:24.0-1) ...\n",
+            "Selecting previously unselected package erlang-ssl.\n",
+            "Preparing to unpack .../7-erlang-ssl_1%3a24.0-1_amd64.deb ...\n",
+            "Unpacking erlang-ssl (1:24.0-1) ...\n",
+            "Selecting previously unselected package erlang-inets.\n",
+            "Preparing to unpack .../8-erlang-inets_1%3a24.0-1_amd64.deb ...\n",
+            "Unpacking erlang-inets (1:24.0-1) ...\n",
+            "Preparing to unpack .../9-elixir_1.12.0-1_all.deb ...\n",
+            "Unpacking elixir (1.12.0-1) over (1.3.3-2) ...\n",
+            "Setting up erlang-base (1:24.0-1) ...\n",
+            "Searching for services which depend on erlang and should be started...none found.\n",
+            "Setting up erlang-crypto (1:24.0-1) ...\n",
+            "Setting up erlang-mnesia (1:24.0-1) ...\n",
+            "Setting up erlang-runtime-tools (1:24.0-1) ...\n",
+            "Setting up erlang-syntax-tools (1:24.0-1) ...\n",
+            "Setting up erlang-asn1 (1:24.0-1) ...\n",
+            "Setting up erlang-public-key (1:24.0-1) ...\n",
+            "Setting up erlang-ssl (1:24.0-1) ...\n",
+            "Setting up erlang-inets (1:24.0-1) ...\n",
+            "Setting up elixir (1.12.0-1) ...\n",
+            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E-5H6g3RV4IZ",
+        "outputId": "dae15f00-f057-431f-dbfd-4f6b59c4072d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -v\n"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Erlang/OTP 24 [erts-12.0] [source] [64-bit] [smp:2:2] [ds:2:2:10] [async-threads:1] [jit]\n",
+            "\n",
+            "Elixir 1.12.0 (compiled with Erlang/OTP 24)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1178,7 +1328,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ir93AAnbvCuA"
+        "id": "RMwZZxhdSuJl"
       },
       "source": [
         "# !elixir -e 'Enum.__info__(:functions) |> Enum.each(fn({function, arity}) -> IO.puts \"#{function}/#{arity}\" end)'"
@@ -1200,66 +1350,181 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "fRHdnhaDDdzn",
+        "outputId": "cf54b2a5-14c5-4146-d2f4-d4110efd1f9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# all? 関数を引数で受け取り、リストの全体が true の時、true を返す\n",
+        "!elixir -e 'IO.puts Enum.all?([\"foo\", \"bar\", \"hello\"], fn(s) -> String.length(s) == 3 end)'\n",
+        "!elixir -e 'IO.puts Enum.all?([\"foo\", \"bar\", \"hello\"], fn(s) -> String.length(s) >1 end)'"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "false\n",
+            "true\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fr1YhaY2ECAE",
+        "outputId": "c5b5983f-2b5d-4098-c53e-90fb7c6a706a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# any? 少なくとも1つの要素が true と評価された場合に true を返す\n",
+        "!elixir -e 'IO.puts Enum.any?([\"foo\", \"bar\", \"hello\"], fn(s) -> String.length(s) == 5 end)'"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "true\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ltdysP5SFOM1",
+        "outputId": "1a00597a-33cd-466e-98a3-a48126c88f28",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# chunk_every リストを小さなグループに分割する\n",
+        "!elixir -e 'IO.inspect Enum.chunk([1, 2, 3, 4, 5, 6], 2)'\n",
+        "!elixir -e 'IO.inspect Enum.chunk([1, 2, 3, 4, 5, 6], 3)'\n",
+        "!elixir -e 'IO.inspect Enum.chunk([1, 2, 3, 4, 5, 6], 4)'"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1, 2], [3, 4], [5, 6]]\n",
+            "[[1, 2, 3], [4, 5, 6]]\n",
+            "[[1, 2, 3, 4]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "myy_9FgVGpeA",
+        "outputId": "d8b0da14-c9f5-4c75-ff44-7636799ed2d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# chunk_by 関数の戻り値が変化することによって分割する\n",
+        "!elixir -e 'IO.inspect Enum.chunk_by([\"one\", \"two\", \"three\", \"four\", \"five\"], fn(x) -> String.length(x) end)'\n",
+        "!elixir -e 'IO.inspect Enum.chunk_by([\"one\", \"two\", \"three\", \"four\", \"five\", \"six\"], fn(x) -> String.length(x) end)'"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[\"one\", \"two\"], [\"three\"], [\"four\", \"five\"]]\n",
+            "[[\"one\", \"two\"], [\"three\"], [\"four\", \"five\"], [\"six\"]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gbEbNAbmUFHE",
+        "outputId": "f31ec410-12d6-464d-f104-0ac283d2266b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# map_every nth ごとに map 処理する\n",
+        "!elixir -e 'IO.inspect Enum.map_every(1..10, 2, fn x -> x + 1000 end)'"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1001, 2, 1003, 4, 1005, 6, 1007, 8, 1009, 10]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rby0EWLoUhKP",
+        "outputId": "ca5931b0-20db-4103-be0e-a39aa925f05d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -v\n"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Erlang/OTP 20 [erts-9.2] [source] [64-bit] [smp:2:2] [ds:2:2:10] [async-threads:10] [kernel-poll:false]\n",
+            "\n",
+            "{\"init terminating in do_boot\",{{badmatch,error},[{'Elixir.System',build,0,[{file,\"lib/system.ex\"},{line,172}]},{'Elixir.System',build_info,0,[{file,\"lib/system.ex\"},{line,164}]},{'Elixir.Kernel.CLI',parse_shared,2,[{file,\"lib/kernel/cli.ex\"},{line,153}]},{'Elixir.Kernel.CLI','shared_option?',3,[{file,\"lib/kernel/cli.ex\"},{line,113}]},{'Elixir.Kernel.CLI',main,1,[{file,\"lib/kernel/cli.ex\"},{line,14}]},{init,start_em,1,[]},{init,do_boot,3,[]}]}}\r\n",
+            "init terminating in do_boot ({{badmatch,error},[{Elixir.System,build,0,[{_},{_}]},{Elixir.System,build_info,0,[{_},{_}]},{Elixir.Kernel.CLI,parse_shared,2,[{_},{_}]},{Elixir.Kernel.CLI,shared_option?,\r\n",
+            "\r\n",
+            "Crash dump is being written to: erl_crash.dump...done\r\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "1c-WGlISZ1fo"
       },
       "source": [
+        "# map_every nth ごとに map 処理する\n",
+        "!elixir -e 'IO.inspect Enum.map_every([1, 2, 3, 4, 5, 6, 7, 8], 3, fn x -> x + 1000 end)'\n",
         "\n",
-        "Copy\n",
-        "iex\n",
-        "iex> Enum.__info__(:functions) |> Enum.each(fn({function, arity}) ->\n",
-        "...>   IO.puts \"#{function}/#{arity}\"\n",
-        "...> end)\n",
-        "all?/1\n",
-        "all?/2\n",
-        "any?/1\n",
-        "any?/2\n",
-        "at/2\n",
-        "at/3\n",
-        "...\n",
-        "このように、 Enum モジュールが非常に多くの機能を持っていることは一目瞭然ですが、\n",
-        "これには明確な理由があります。 列挙は関数型プログラミングの中核であり、\n",
-        "Elixirが開発者にもたらす驚くべきその他の恩恵と基部で統合的に用意されているおかげです。\n",
+        "iex> Enum.map_every(1..10, 2, fn x -> x + 1000 end)\n",
+        "[1001, 2, 1003, 4, 1005, 6, 1007, 8, 1009, 10]\n",
         "\n",
-        "全ての関数を知りたい場合は公式ドキュメントのEnumを参照してください。\n",
-        "尚、列挙の遅延処理ではStreamモジュールを利用してください。\n",
+        "iex> Enum.map_every(1..10, 3, fn x -> x + 1000 end)\n",
+        "[1001, 2, 3, 1004, 5, 6, 1007, 8, 9, 1010]\n",
         "\n",
-        "all? \n",
-        "通常、 all?/2 にはコレクションの要素に対して適用する関数を渡します。 all?/2 の場合、コレクションの全体が true と評価されなければならず、そうでなければ false が返されます。\n",
+        "iex> Enum.map_every(1..5, 0, fn x -> x + 1000 end)\n",
+        "[1, 2, 3, 4, 5]\n",
         "\n",
-        "Copy\n",
-        "iex> Enum.all?([\"foo\", \"bar\", \"hello\"], fn(s) -> String.length(s) == 3 end)\n",
-        "false\n",
-        "iex> Enum.all?([\"foo\", \"bar\", \"hello\"], fn(s) -> String.length(s) > 1 end)\n",
-        "true\n",
-        "any? \n",
-        "上記と違って、 any? は少なくとも1つの要素が true と評価された場合に true を返します:\n",
+        "iex> Enum.map_every([1, 2, 3], 1, fn x -> x + 1000 end)\n",
+        "[1001, 1002, 1003]\n",
         "\n",
-        "Copy\n",
-        "iex> Enum.any?([\"foo\", \"bar\", \"hello\"], fn(s) -> String.length(s) == 5 end)\n",
-        "true\n",
-        "chunk_every \n",
-        "コレクションを小さなグループに分割する必要があるなら、恐らく chunk_every/2 こそが探し求めている関数でしょう:\n",
         "\n",
-        "Copy\n",
-        "iex> Enum.chunk_every([1, 2, 3, 4, 5, 6], 2)\n",
-        "[[1, 2], [3, 4], [5, 6]]\n",
-        "chunk_every/4 にはいくつかのオプションがありますが、ここでは触れないのでこの関数の公式ドキュメントを調べてください。\n",
-        "\n",
-        "chunk_by \n",
-        "要素数ではない他の何かでコレクションを分類したい場合には、 chunk_by/2 関数を使うことができます。この関数は列挙可能なコレクションと関数を引数に取り、その関数の戻り値が変化することによってコレクションの分類もそれに倣いながら開始されます。\n",
-        "\n",
-        "Copy\n",
-        "iex> Enum.chunk_by([\"one\", \"two\", \"three\", \"four\", \"five\"], fn(x) -> String.length(x) end)\n",
-        "[[\"one\", \"two\"], [\"three\"], [\"four\", \"five\"]]\n",
-        "iex> Enum.chunk_by([\"one\", \"two\", \"three\", \"four\", \"five\", \"six\"], fn(x) -> String.length(x) end)\n",
-        "[[\"one\", \"two\"], [\"three\"], [\"four\", \"five\"], [\"six\"]]\n",
-        "map_every \n",
-        "時にはコレクションをグループに別けるだけでは充分ではない場合があります。 nth 毎のアイテムに対して何かの処理をしたい時には map_every/3 が有用です。これは最初の要素にかならず触れます。\n",
-        "\n",
-        "Copy\n",
-        "# 関数を最初に適用してから3つ毎に同様の処理\n",
-        "iex> Enum.map_every([1, 2, 3, 4, 5, 6, 7, 8], 3, fn x -> x + 1000 end)\n",
-        "[1001, 2, 3, 1004, 5, 6, 1007, 8]\n",
         "each \n",
         "新しい値を生成することなく、コレクションを反復する必要があるかもしれません。こうした場合には each/2 を使います:\n",
         "\n",
