--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPt7200w9PN1+Bwsd76dMa2",
+      "authorship_tag": "ABX9TyMZiBnV5PMiOL1mWMRt6lTC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,11 +69,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6FkejEE2crA5",
-        "outputId": "0dadf274-1482-4410-8b48-c6e0580db8c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6FkejEE2crA5",
+        "outputId": "0dadf274-1482-4410-8b48-c6e0580db8c3"
       },
       "source": [
         "!elixir -v"
@@ -1356,11 +1356,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yn6ucqU9gVW1",
-        "outputId": "601d14bf-5043-4889-ce54-6d1a02da2a2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yn6ucqU9gVW1",
+        "outputId": "601d14bf-5043-4889-ce54-6d1a02da2a2c"
       },
       "source": [
         "# each 新しい値を生成することなく反復する。返り値は:ok というアトム。\n",
@@ -1384,34 +1384,86 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1c-WGlISZ1fo"
+        "id": "wzRwKv_imULW",
+        "outputId": "b5a2fd71-b970-459d-b7d8-ebe22c7fa501",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# map 関数を各要素に適用して新しいリストを生み出す\n",
-        "iex> Enum.map([0, 1, 2, 3], fn(x) -> x - 1 end)\n",
-        "[-1, 0, 1, 2]\n",
-        "min \n",
-        "コレクションの中で最小の(min/1)値を探します:\n",
-        "\n",
-        "Copy\n",
-        "iex> Enum.min([5, 3, 0, -1])\n",
-        "-1\n",
-        "min/2 も同様ですが、コレクションが空であった場合にあらかじめ最小値を生成する為の関数を渡すことができます。\n",
-        "\n",
-        "Copy\n",
-        "iex> Enum.min([], fn -> :foo end)\n",
-        ":foo\n",
-        "max \n",
-        "コレクションの中で最大の(max/1)値を返します:\n",
-        "\n",
-        "Copy\n",
-        "iex> Enum.max([5, 3, 0, -1])\n",
-        "5\n",
-        "max/2 と max/1 の関係は min/2 と min/1 の関係と同じです:\n",
-        "\n",
-        "Copy\n",
-        "Enum.max([], fn -> :bar end)\n",
-        ":bar\n",
+        "!elixir -e 'IO.inspect Enum.map([0, 1, 2, 3], fn(x) -> x - 1 end)'"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[-1, 0, 1, 2]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "85q0m8_ZmyyQ",
+        "outputId": "bdf70f32-c114-462b-f396-951f1549b4fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# min 最小の値を探す。 リストが空の場合エラーになる\n",
+        "# リストが空だったときのために予め最衣装血を生成する関数を渡すことができる\n",
+        "!elixir -e 'IO.inspect Enum.min([5, 3, 0, -1])'\n",
+        "!elixir -e 'IO.inspect Enum.min([], fn -> :foo end)'"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-1\n",
+            ":foo\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F2Wx1evnnUWB",
+        "outputId": "dd19d081-838f-4077-a7dc-00ef14eec9f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# max 最大の(max/1)値を返す\n",
+        "!elixir -e 'IO.inspect Enum.max([5, 3, 0, -1])'\n",
+        "!elixir -e 'IO.inspect Enum.max([], fn -> :bar end)'"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            ":bar\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1c-WGlISZ1fo"
+      },
+      "source": [
         "filter \n",
         "filter/2 を使うと、与えられた関数によって true と評価された要素だけを得る為に、それ以外の要素を取り除くことができます。\n",
         "\n",
