--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMZiBnV5PMiOL1mWMRt6lTC",
+      "authorship_tag": "ABX9TyMqE0ykXLL+llCEMmhUbQGm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1384,11 +1384,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wzRwKv_imULW",
-        "outputId": "b5a2fd71-b970-459d-b7d8-ebe22c7fa501",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wzRwKv_imULW",
+        "outputId": "b5a2fd71-b970-459d-b7d8-ebe22c7fa501"
       },
       "source": [
         "# map 関数を各要素に適用して新しいリストを生み出す\n",
@@ -1408,11 +1408,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "85q0m8_ZmyyQ",
-        "outputId": "bdf70f32-c114-462b-f396-951f1549b4fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "85q0m8_ZmyyQ",
+        "outputId": "bdf70f32-c114-462b-f396-951f1549b4fb"
       },
       "source": [
         "# min 最小の値を探す。 リストが空の場合エラーになる\n",
@@ -1435,11 +1435,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "F2Wx1evnnUWB",
-        "outputId": "dd19d081-838f-4077-a7dc-00ef14eec9f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "F2Wx1evnnUWB",
+        "outputId": "dd19d081-838f-4077-a7dc-00ef14eec9f3"
       },
       "source": [
         "# max 最大の(max/1)値を返す\n",
@@ -1461,28 +1461,65 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "LMRdRxOso7pU",
+        "outputId": "daac690a-544a-48bc-927b-288fc3804ccb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# filter 与えられた関数によって true と評価された要素だけを得る\n",
+        "!elixir -e 'IO.inspect Enum.filter([1, 2, 3, 4], fn(x) -> rem(x, 2) == 0 end)'\n",
+        "!elixir -e 'IO.inspect Enum.filter([], fn(x) -> rem(x, 2) == 0 end)'"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 4]\n",
+            "[]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XKKtE4wOpvBi",
+        "outputId": "4f6abd08-4b82-4ab8-b76b-2fa596d96cc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# reduce リストを関数に従って単一の値へ抽出すうる。 accumulator を指定できる。\n",
+        "# accumulator が与えられない場合は最初の要素が用いられる。\n",
+        "!elixir -e 'IO.inspect Enum.reduce([1, 2, 3], 10, fn(x, acc) -> x + acc end)'\n",
+        "!elixir -e 'IO.inspect Enum.reduce([1, 2, 3], fn(x, acc) -> x + acc end)'\n",
+        "!elixir -e 'IO.inspect Enum.reduce([\"a\",\"b\",\"c\"], \"1\", fn(x,acc)-> x <> acc end)'"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "16\n",
+            "6\n",
+            "\"cba1\"\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "1c-WGlISZ1fo"
       },
       "source": [
-        "filter \n",
-        "filter/2 を使うと、与えられた関数によって true と評価された要素だけを得る為に、それ以外の要素を取り除くことができます。\n",
-        "\n",
-        "Copy\n",
-        "iex> Enum.filter([1, 2, 3, 4], fn(x) -> rem(x, 2) == 0 end)\n",
-        "[2, 4]\n",
-        "reduce \n",
-        "reduce/3 を用いることで、コレクションをまとめ、そこから単一の値へと抽出することができます。この処理には任意のアキュムレータを関数に渡します。アキュムレータとは、前の演算結果を一時的に保持するものです(この例では 10)。アキュムレータが与えられない場合にはコレクションの最初の要素が用いられます。\n",
-        "\n",
-        "Copy\n",
-        "iex> Enum.reduce([1, 2, 3], 10, fn(x, acc) -> x + acc end)\n",
-        "16\n",
-        "\n",
-        "iex> Enum.reduce([1, 2, 3], fn(x, acc) -> x + acc end)\n",
-        "6\n",
-        "\n",
-        "iex> Enum.reduce([\"a\",\"b\",\"c\"], \"1\", fn(x,acc)-> x <> acc end)\n",
-        "\"cba1\"\n",
-        "sort \n",
+        "# sort \n",
         "コレクションのソートに、関数を1つだけでなく2つ使うと容易になります。\n",
         "\n",
         "sort/1 はソートの順序を決める為にErlangの Term優先順位 を使います:\n",
