--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMqE0ykXLL+llCEMmhUbQGm",
+      "authorship_tag": "ABX9TyPdsxvzPQvxqVXAUQlR49uZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1461,11 +1461,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LMRdRxOso7pU",
-        "outputId": "daac690a-544a-48bc-927b-288fc3804ccb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LMRdRxOso7pU",
+        "outputId": "daac690a-544a-48bc-927b-288fc3804ccb"
       },
       "source": [
         "# filter 与えられた関数によって true と評価された要素だけを得る\n",
@@ -1487,11 +1487,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XKKtE4wOpvBi",
-        "outputId": "4f6abd08-4b82-4ab8-b76b-2fa596d96cc7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XKKtE4wOpvBi",
+        "outputId": "4f6abd08-4b82-4ab8-b76b-2fa596d96cc7"
       },
       "source": [
         "# reduce リストを関数に従って単一の値へ抽出すうる。 accumulator を指定できる。\n",
@@ -1516,46 +1516,57 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "KcZHo75X0t94",
+        "outputId": "0ee9b8ff-7a2c-4311-c09c-f86f7e6b972e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# sort `sort/1` はソートの順序に Erlangの Term 優先順位 を使う\n",
+        "!elixir -e 'IO.inspect Enum.sort([5, 6, 1, 3, -1, 4])'\n",
+        "!elixir -e 'IO.inspect Enum.sort([:foo, \"bar\", Enum, -1, 4])'\n",
+        "\n",
+        "# `sort/2` は、順序を決める為の関数を渡すことができる\n",
+        "!elixir -e 'IO.inspect Enum.sort([%{:val => 4}, %{:val => 1}], fn(x, y) -> x[:val] > y[:val] end)'\n",
+        "\n",
+        "# なしの場合\n",
+        "!elixir -e 'IO.inspect Enum.sort([%{:count => 4}, %{:count => 1}])'\n",
+        "\n",
+        "# sort/2 に :asc または :desc をソート関数として渡すことができる\n",
+        "!elixir -e 'IO.inspect Enum.sort([2, 3, 1], :desc)'\n"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[-1, 1, 3, 4, 5, 6]\n",
+            "[-1, 4, Enum, :foo, \"bar\"]\n",
+            "[%{val: 4}, %{val: 1}]\n",
+            "[%{count: 1}, %{count: 4}]\n",
+            "[3, 2, 1]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "1c-WGlISZ1fo"
       },
       "source": [
-        "# sort \n",
-        "コレクションのソートに、関数を1つだけでなく2つ使うと容易になります。\n",
-        "\n",
-        "sort/1 はソートの順序を決める為にErlangの Term優先順位 を使います:\n",
-        "\n",
-        "Copy\n",
-        "iex> Enum.sort([5, 6, 1, 3, -1, 4])\n",
-        "[-1, 1, 3, 4, 5, 6]\n",
-        "\n",
-        "iex> Enum.sort([:foo, \"bar\", Enum, -1, 4])\n",
-        "[-1, 4, Enum, :foo, \"bar\"]\n",
-        "一方で sort/2 には、自分で順序を決める為の関数を渡すことができます:\n",
-        "\n",
-        "Copy\n",
-        "# ソート関数あり\n",
-        "iex> Enum.sort([%{:val => 4}, %{:val => 1}], fn(x, y) -> x[:val] > y[:val] end)\n",
-        "[%{val: 4}, %{val: 1}]\n",
-        "\n",
-        "# なし\n",
-        "iex> Enum.sort([%{:count => 4}, %{:count => 1}])\n",
-        "[%{count: 1}, %{count: 4}]\n",
-        "便宜上, sort/2 に :asc または :desc をソート関数として渡すことができます：\n",
-        "\n",
-        "Copy\n",
-        "Enum.sort([2, 3, 1], :desc)\n",
-        "[3, 2, 1]\n",
-        "uniq \n",
-        "uniq/1 を使ってコレクションから重複した要素を取り除くことができます:\n",
-        "\n",
-        "Copy\n",
+        "# uniq 重複した要素を取り除く\n",
         "iex> Enum.uniq([1, 2, 3, 2, 1, 1, 1, 1, 1])\n",
         "[1, 2, 3]\n",
-        "uniq_by \n",
-        "uniq_by/2 もコレクションから重複した要素を削除しますが、ユニークかどうか比較を行う関数を渡せます。\n",
         "\n",
-        "Copy\n",
+        "# uniq_by 重複した要素を削除するが、ユニークかどうか比較を行う関数を渡せる\n",
         "iex> Enum.uniq_by([%{x: 1, y: 1}, %{x: 2, y: 1}, %{x: 3, y: 3}], fn coord -> coord.y end)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "[%{x: 1, y: 1}, %{x: 3, y: 3}]\n",
         "キャプチャ演算子（&）を使用したEnum \n",
         "ElixirのEnumモジュール内の多くの関数は、渡されるEnum型のオブジェクトを処理するための引数として無名関数を取ります。\n",
