--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPry/vZr5Gftq6IT+5PQR1g",
+      "authorship_tag": "ABX9TyNUA9Y22VEGpgTdto3vbvau",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
         "id": "kEf4GSz_Vva4"
       },
       "source": [
-        "* https://elixirschool.com/ja/lessons/basics/collections/#マップ\n",
+        "* https://elixirschool.com/ja/lessons/basics/control-structures/\n",
         "* https://magazine.rubyist.net/articles/0054/0054-ElixirBook.html"
       ]
     },
@@ -63,7 +63,7 @@
         "!wget https://packages.erlang-solutions.com/erlang-solutions_2.0_all.deb && sudo dpkg -i erlang-solutions_2.0_all.deb\n",
         "!sudo apt install elixir\n"
       ],
-      "execution_count": 58,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -78,7 +78,7 @@
       "source": [
         "!elixir -v"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1331,7 +1331,7 @@
         "!elixir -e 'IO.inspect Enum.map_every(1..10, 1, fn x -> x + 1000 end)'\n",
         "!elixir -e 'IO.inspect Enum.map_every(1..10, 0, fn x -> x + 1000 end)'"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1358,7 +1358,7 @@
         "!elixir -e 'IO.inspect Enum.each([\"one\", \"two\", \"three\"], fn(s) -> IO.puts(s) end)'\n",
         "!elixir -e 'IO.puts Enum.each([\"one\", \"two\", \"three\"], fn(s) -> IO.puts(s) end)'"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1385,7 +1385,7 @@
         "# map 関数を各要素に適用して新しいリストを生み出す\n",
         "!elixir -e 'IO.inspect Enum.map([0, 1, 2, 3], fn(x) -> x - 1 end)'"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1411,7 +1411,7 @@
         "!elixir -e 'IO.inspect Enum.min([5, 3, 0, -1])'\n",
         "!elixir -e 'IO.inspect Enum.min([], fn -> :foo end)'"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1437,7 +1437,7 @@
         "!elixir -e 'IO.inspect Enum.max([5, 3, 0, -1])'\n",
         "!elixir -e 'IO.inspect Enum.max([], fn -> :bar end)'"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1463,7 +1463,7 @@
         "!elixir -e 'IO.inspect Enum.filter([1, 2, 3, 4], fn(x) -> rem(x, 2) == 0 end)'\n",
         "!elixir -e 'IO.inspect Enum.filter([], fn(x) -> rem(x, 2) == 0 end)'"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1491,7 +1491,7 @@
         "!elixir -e 'IO.inspect Enum.reduce([1, 2, 3], fn(x, acc) -> x + acc end)'\n",
         "!elixir -e 'IO.inspect Enum.reduce([\"a\",\"b\",\"c\"], \"1\", fn(x,acc)-> x <> acc end)'"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1527,7 +1527,7 @@
         "# sort/2 に :asc または :desc をソート関数として渡すことができる\n",
         "!elixir -e 'IO.inspect Enum.sort([2, 3, 1], :desc)'\n"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1546,10 +1546,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ajs77q8e14f4",
-        "outputId": "de33dc6f-b9ac-4d60-be9c-ae4bf93977ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "de33dc6f-b9ac-4d60-be9c-ae4bf93977ed"
       },
       "source": [
         "# uniq 重複した要素を取り除く\n",
@@ -1559,7 +1559,7 @@
         "# uniq_by 重複した要素を削除するが、ユニークかどうか比較を行う関数を渡せる\n",
         "!elixir -e 'IO.inspect Enum.uniq_by([%{x: 1, y: 1}, %{x: 2, y: 1}, %{x: 3, y: 3}], fn coord -> coord.y end)'"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1569,15 +1569,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2d7OrFCK2RPY"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -1597,44 +1588,196 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1c-WGlISZ1fo"
+        "id": "1c-WGlISZ1fo",
+        "outputId": "61088b3d-f774-45df-efa0-54626dbcb3fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# 無名関数でのキャプチャ演算子の使用 \n",
-        "iex> Enum.map([1,2,3], fn number -> number + 3 end)\n",
-        "[4, 5, 6]\n",
-        "次に、キャプチャ演算子（&）を実装します。数値のリスト（[1,2,3]）の各要素をキャプチャし、マッピング関数を通過するときに各要素を変数&1に割り当てます。\n",
+        "!elixir -e 'IO.inspect Enum.map([1,2,3], fn number -> number + 3 end)'\n",
+        "!elixir -e 'IO.inspect Enum.map([1,2,3], &(&1 + 3))'\n",
+        "!elixir -e 'plus_three = &(&1 + 3);IO.inspect Enum.map([1,2,3], plus_three)'"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[4, 5, 6]\n",
+            "[4, 5, 6]\n",
+            "[4, 5, 6]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y_lBe9DZczYW"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HhMGJ2HzdAPn"
+      },
+      "source": [
+        "# パターンマッチング\n",
+        "\n",
+        "パターンマッチングでは、値、データ構造、関数をマッチすることができる。\n",
+        "\n",
+        "* マッチ演算子\n",
+        "* ピン演算子"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6oVfGSzCdX2-",
+        "outputId": "ff4ca919-c6ab-4063-9074-79c57f64059e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# マッチ演算子 `=` はマッチ演算子である。 マッチ演算子を通して値を代入し、\n",
+        "# その後、マッチさせることができる。マッチすると、方程式の結果が返され、\n",
+        "# 失敗すると、エラーになる\n",
+        "!elixir -e 'IO.puts x = 1'\n",
+        "!elixir -e 'x = 1;IO.puts 1 = x'\n",
+        "# !elixir -e 'x = 1;IO.puts 2 = x' # (MatchError) no match of right hand side value: 1"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V_S_BGxmeX-4"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z43eR8Muc03m"
+      },
+      "source": [
+        "マッチ演算子 \n",
+        "変化球への準備はいいですか？Elixirでは、 = 演算子は実際には代数学での等号に\n",
+        "値するマッチ演算子です。\n",
+        "このマッチ演算子を通して値を代入し、その後マッチさせることができます。\n",
+        "マッチングに成功すると方程式の結果を返します。失敗する場合はエラーを投げます。見てみましょう:\n",
         "\n",
         "Copy\n",
-        "iex> Enum.map([1,2,3], &(&1 + 3))\n",
-        "[4, 5, 6]\n",
-        "これをさらにリファクタリングして、キャプチャ演算子を特徴とする以前の無名関数を変数に割り当て、 Enum.map/2 関数から呼び出すことができます。\n",
+        "iex> x = 1\n",
+        "1\n",
+        "では、いくつか単純なマッチングを試してみましょう:\n",
         "\n",
         "Copy\n",
-        "iex> plus_three = &(&1 + 3)\n",
-        "iex> Enum.map([1,2,3], plus_three)\n",
-        "[4, 5, 6]\n",
-        "名前付き関数でのキャプチャ演算子の使用 \n",
-        "まず、名前付き関数を作成し、 Enum.map/2 で定義されている無名関数内で呼び出します。\n",
+        "iex> 1 = x\n",
+        "1\n",
+        "iex> 2 = x\n",
+        "** (MatchError) no match of right hand side value: 1\n",
+        "知っているコレクションで、いくつか試してみましょう:\n",
         "\n",
         "Copy\n",
-        "defmodule Adding do\n",
-        "  def plus_three(number), do: number + 3\n",
-        "end\n",
+        "# リスト\n",
+        "iex> list = [1, 2, 3]\n",
+        "[1, 2, 3]\n",
+        "iex> [1, 2, 3] = list\n",
+        "[1, 2, 3]\n",
+        "iex> [] = list\n",
+        "** (MatchError) no match of right hand side value: [1, 2, 3]\n",
         "\n",
-        "iex>  Enum.map([1,2,3], fn number -> Adding.plus_three(number) end)\n",
-        "[4, 5, 6]\n",
-        "次に、キャプチャ演算子を使用するようにリファクタリングできます。\n",
+        "iex> [1 | tail] = list\n",
+        "[1, 2, 3]\n",
+        "iex> tail\n",
+        "[2, 3]\n",
+        "iex> [2|_] = list\n",
+        "** (MatchError) no match of right hand side value: [1, 2, 3]\n",
+        "\n",
+        "# タプル\n",
+        "iex> {:ok, value} = {:ok, \"Successful!\"}\n",
+        "{:ok, \"Successful!\"}\n",
+        "iex> value\n",
+        "\"Successful!\"\n",
+        "iex> {:ok, value} = {:error}\n",
+        "** (MatchError) no match of right hand side value: {:error}\n",
+        "\n",
+        "\n",
+        "ピン演算子 \n",
+        "マッチ演算子は左辺に変数が含まれている時に代入操作を行います。 この変数を再び束縛するという挙動は望ましくない場合があります。 そうした状況のために、ピン演算子(^)があります。\n",
+        "\n",
+        "ピン演算子で変数を固定すると、新しく再束縛するのではなく既存の値とマッチします。 これがどのような働きをするのか見てみましょう:\n",
         "\n",
         "Copy\n",
-        "iex> Enum.map([1,2,3], &Adding.plus_three(&1))\n",
-        "[4, 5, 6]\n",
-        "最も簡潔な構文の場合、変数を明示的にキャプチャせずに、名前付き関数を直接呼び出すことができます。\n",
+        "iex> x = 1\n",
+        "1\n",
+        "iex> ^x = 2\n",
+        "** (MatchError) no match of right hand side value: 2\n",
+        "iex> {x, ^x} = {2, 1}\n",
+        "{2, 1}\n",
+        "iex> x\n",
+        "2\n",
+        "Elixir 1.2ではマップのキーや関数の節でのピン演算子がサポートされました。\n",
         "\n",
         "Copy\n",
-        "iex> Enum.map([1,2,3], &Adding.plus_three/1)\n",
-        "[4, 5, 6]\n",
-        "\n"
+        "iex> key = \"hello\"\n",
+        "\"hello\"\n",
+        "iex> %{^key => value} = %{\"hello\" => \"world\"}\n",
+        "%{\"hello\" => \"world\"}\n",
+        "iex> value\n",
+        "\"world\"\n",
+        "iex> %{^key => value} = %{:hello => \"world\"}\n",
+        "** (MatchError) no match of right hand side value: %{hello: \"world\"}\n",
+        "関数の節でのピン演算子の例:\n",
+        "\n",
+        "Copy\n",
+        "iex> greeting = \"Hello\"\n",
+        "\"Hello\"\n",
+        "iex> greet = fn\n",
+        "...>   (^greeting, name) -> \"Hi #{name}\"\n",
+        "...>   (greeting, name) -> \"#{greeting}, #{name}\"\n",
+        "...> end\n",
+        "#Function<12.54118792/2 in :erl_eval.expr/5>\n",
+        "iex> greet.(\"Hello\", \"Sean\")\n",
+        "\"Hi Sean\"\n",
+        "iex> greet.(\"Mornin'\", \"Sean\")\n",
+        "\"Mornin', Sean\"\n",
+        "iex> greeting\n",
+        "\"Hello\"\n",
+        "\"Mornin'\" の例では、 greeting から \"Mornin'\" への再代入が発生するのは関数の中だけという点に注意しましょう。 greeting の外側では \"Hello\" のままとなっています。\n",
+        "\n",
+        "Caught a mistake or want to contribute to the lesson? Edit this page on GitHub!\n",
+        "← Enum\n",
+        "制御構造 →\n",
+        "bg bn de en es fr gr id it ja ko ms no pl pt ru sk ta th tr uk vi zh-hans zh-hant\n",
+        "Elixir 1.10.1 - Erlang/OTP 22.0 [erts-10.5.3]\n",
+        "Menu\n",
+        "プログラミング言語Elixirのレッスン\n",
+        "© 2021 Sean Callan All rights reserved.\n",
+        "\n",
+        "Toggle"
       ],
       "execution_count": null,
       "outputs": []
