--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNUA9Y22VEGpgTdto3vbvau",
+      "authorship_tag": "ABX9TyO6ddrot0w/O5HAKiDGPPEx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "!wget https://packages.erlang-solutions.com/erlang-solutions_2.0_all.deb && sudo dpkg -i erlang-solutions_2.0_all.deb\n",
         "!sudo apt install elixir\n"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -1589,10 +1589,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "1c-WGlISZ1fo",
-        "outputId": "61088b3d-f774-45df-efa0-54626dbcb3fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "61088b3d-f774-45df-efa0-54626dbcb3fa"
       },
       "source": [
         "# 無名関数でのキャプチャ演算子の使用 \n",
@@ -1616,15 +1616,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Y_lBe9DZczYW"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "HhMGJ2HzdAPn"
       },
       "source": [
@@ -1637,13 +1628,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zs8-szD5HkZb"
+      },
+      "source": [
+        "マッチ演算子\n",
+        "\n",
+        "マッチ演算子 `=` はマッチ演算子である。 マッチ演算子を通して値を代入し、その後、マッチさせることができる。マッチすると、方程式の結果が返され、失敗すると、エラーになる。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "6oVfGSzCdX2-",
-        "outputId": "ff4ca919-c6ab-4063-9074-79c57f64059e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6oVfGSzCdX2-",
+        "outputId": "ff4ca919-c6ab-4063-9074-79c57f64059e"
       },
       "source": [
         "# マッチ演算子 `=` はマッチ演算子である。 マッチ演算子を通して値を代入し、\n",
@@ -1651,7 +1653,8 @@
         "# 失敗すると、エラーになる\n",
         "!elixir -e 'IO.puts x = 1'\n",
         "!elixir -e 'x = 1;IO.puts 1 = x'\n",
-        "# !elixir -e 'x = 1;IO.puts 2 = x' # (MatchError) no match of right hand side value: 1"
+        "# !elixir -e 'x = 1;IO.puts 2 = x'\n",
+        "#=> (MatchError) no match of right hand side value: 1"
       ],
       "execution_count": 7,
       "outputs": [
@@ -1668,13 +1671,136 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "V_S_BGxmeX-4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V_S_BGxmeX-4",
+        "outputId": "5c48ee1c-a2d0-4c10-882d-98ed5bfd39bc"
       },
       "source": [
-        ""
+        "# リストでのマッチ演算子\n",
+        "!elixir -e 'IO.inspect list = [1, 2, 3]'\n",
+        "!elixir -e 'list = [1, 2, 3]; IO.inspect [1, 2, 3] = list'\n",
+        "# !elixir -e 'list = [1, 2, 3]; IO.inspect [] = list'\n",
+        "#=> (MatchError) no match of right hand side value: [1, 2, 3]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3]\n",
+            "[1, 2, 3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JGD6GcMsGG7n",
+        "outputId": "5e24a243-c726-45bd-a070-835c476619c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'list = [1, 2, 3]; IO.inspect [1 | tail] = list'\n",
+        "!elixir -e 'list = [1, 2, 3];  [1 | tail] = list; IO.inspect tail'"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3]\n",
+            "[2, 3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FAI9EHeUGviK",
+        "outputId": "7ad435a4-9c8d-40c0-afc6-a4c099994135",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# タプルとマッチ演算子\n",
+        "!elixir -e 'IO.inspect {:ok, value} = {:ok, \"Successful!\"}'\n",
+        "!elixir -e '{:ok, value} = {:ok, \"Successful!\"}; IO.inspect  value'"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{:ok, \"Successful!\"}\n",
+            "\"Successful!\"\n",
+            ":ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y_lBe9DZczYW"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "niw-oNFPHc8u"
+      },
+      "source": [
+        "# ピン演算子\n",
+        "\n",
+        "マッチ演算子は左辺に変数が含まれている時に代入操作を行う。 \n",
+        "\n",
+        "この変数を再び束縛するという挙動は望ましくない場合がある。 そうした状況のために、ピン演算子 `^` がある。\n",
+        "\n",
+        "ピン演算子で変数を固定すると、新しく再束縛するのではなく既存の値とマッチする。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LwiOOT1LIEwW",
+        "outputId": "785bd16f-414a-4b7c-d48a-3c716947de7a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# ピン演算子\n",
+        "!elixir -e 'IO.inspect x = 1'\n",
+        "# !elixir -e 'x = 1; IO.inspect ^x = 2'\n",
+        "#=> ** (MatchError) no match of right hand side value: 2"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "** (MatchError) no match of right hand side value: 2\n",
+            "    (stdlib) :erl_eval.expr/3\n",
+            "    (elixir) lib/code.ex:168: Code.eval_string/3\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1682,53 +1808,6 @@
         "id": "Z43eR8Muc03m"
       },
       "source": [
-        "マッチ演算子 \n",
-        "変化球への準備はいいですか？Elixirでは、 = 演算子は実際には代数学での等号に\n",
-        "値するマッチ演算子です。\n",
-        "このマッチ演算子を通して値を代入し、その後マッチさせることができます。\n",
-        "マッチングに成功すると方程式の結果を返します。失敗する場合はエラーを投げます。見てみましょう:\n",
-        "\n",
-        "Copy\n",
-        "iex> x = 1\n",
-        "1\n",
-        "では、いくつか単純なマッチングを試してみましょう:\n",
-        "\n",
-        "Copy\n",
-        "iex> 1 = x\n",
-        "1\n",
-        "iex> 2 = x\n",
-        "** (MatchError) no match of right hand side value: 1\n",
-        "知っているコレクションで、いくつか試してみましょう:\n",
-        "\n",
-        "Copy\n",
-        "# リスト\n",
-        "iex> list = [1, 2, 3]\n",
-        "[1, 2, 3]\n",
-        "iex> [1, 2, 3] = list\n",
-        "[1, 2, 3]\n",
-        "iex> [] = list\n",
-        "** (MatchError) no match of right hand side value: [1, 2, 3]\n",
-        "\n",
-        "iex> [1 | tail] = list\n",
-        "[1, 2, 3]\n",
-        "iex> tail\n",
-        "[2, 3]\n",
-        "iex> [2|_] = list\n",
-        "** (MatchError) no match of right hand side value: [1, 2, 3]\n",
-        "\n",
-        "# タプル\n",
-        "iex> {:ok, value} = {:ok, \"Successful!\"}\n",
-        "{:ok, \"Successful!\"}\n",
-        "iex> value\n",
-        "\"Successful!\"\n",
-        "iex> {:ok, value} = {:error}\n",
-        "** (MatchError) no match of right hand side value: {:error}\n",
-        "\n",
-        "\n",
-        "ピン演算子 \n",
-        "マッチ演算子は左辺に変数が含まれている時に代入操作を行います。 この変数を再び束縛するという挙動は望ましくない場合があります。 そうした状況のために、ピン演算子(^)があります。\n",
-        "\n",
-        "ピン演算子で変数を固定すると、新しく再束縛するのではなく既存の値とマッチします。 これがどのような働きをするのか見てみましょう:\n",
         "\n",
         "Copy\n",
         "iex> x = 1\n",
