--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNuZIa3c8dIKgg2QsYKoM80",
+      "authorship_tag": "ABX9TyPKtcYOVes7WMpFiHFFL7+H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,35 +61,22 @@
       "source": [
         "%%capture\n",
         "!wget https://packages.erlang-solutions.com/erlang-solutions_2.0_all.deb && sudo dpkg -i erlang-solutions_2.0_all.deb\n",
-        "!sudo apt install elixir\n"
+        "!sudo apt update\n",
+        "!sudo apt install elixir"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6FkejEE2crA5",
-        "outputId": "0dadf274-1482-4410-8b48-c6e0580db8c3"
+        "id": "6FkejEE2crA5"
       },
       "source": [
         "!elixir -v"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Erlang/OTP 24 [erts-12.0] [source] [64-bit] [smp:2:2] [ds:2:2:10] [async-threads:1] [jit]\n",
-            "\n",
-            "Elixir 1.12.0 (compiled with Erlang/OTP 24)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -208,6 +195,123 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jbgpkxtYpARC"
+      },
+      "source": [
+        "次のもネットで紹介されていた例で、ハローワールド並行処理版\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kg0J7hd8pHXP",
+        "outputId": "7a2641ca-fe3d-4c4c-8560-c6644a74bba1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile temp.exs\n",
+        "parent = self()\n",
+        " \n",
+        "spawn_link(fn ->\n",
+        "  send parent, {:msg, \"hello world\"}\n",
+        "end)\n",
+        " \n",
+        "receive do\n",
+        "  {:msg, contents} -> IO.puts contents\n",
+        "end"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing temp.exs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XWmyBYpEpZ4n",
+        "outputId": "939acc3b-4a87-4d1e-8ff1-4b7cb1990b1d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello world\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z6EdDr20r5q8"
+      },
+      "source": [
+        "上の例でやっていることはつぎのような流れである。\n",
+        "\n",
+        "1. spawn_linkという関数に渡された関数が、関数の内容を実行する。\n",
+        "2. 新しく作られたプロセス側では、メインプロセス側（parent）に “hello world” というメッセージを送る。\n",
+        "3. メインプロセス側は、どこからかメッセージが来ないかを待ち受けて（receive）、メッセージが来たらそれをコンソールに表示する。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gXbF4HnE1jnt"
+      },
+      "source": [
+        "%%writefile temp.txt\n",
+        "defmodule Chain do\n",
+        "  def counter(next_pid) do\n",
+        "    receive do\n",
+        "      n -> send next_pid, n + 1\n",
+        "    end\n",
+        "  end\n",
+        " \n",
+        "  def create_processes(n) do\n",
+        "    last = Enum.reduce 1..n, self,\n",
+        "      fn (_, send_to) -> spawn(Chain, :counter, [send_to]) end\n",
+        "    send last, 0\n",
+        "    receive do\n",
+        "      final_answer when is_integer(final_answer) ->\n",
+        "        \"Result is #{inspect(final_answer)}\"\n",
+        "    end\n",
+        "  end\n",
+        " \n",
+        "  def run(n) do\n",
+        "    IO.puts inspect :timer.tc(Chain, :create_processes, [n])\n",
+        "  end\n",
+        "end\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Flqn_Jrmrxy1"
+      },
+      "source": [
+        "これは何をやっているのか。\n",
+        "1. kkk\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1806,11 +1910,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GwNu1JTePo1J",
-        "outputId": "f11ec9e7-ec51-4c11-b5a2-f2bad5669449",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GwNu1JTePo1J",
+        "outputId": "f11ec9e7-ec51-4c11-b5a2-f2bad5669449"
       },
       "source": [
         "# 関数の clause でのピン演算子\n",
